Removed Text Pop download

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <p2>&emsp;&emsp;Text Pop was a game I made using <b>Unity</b> and <b>C#</b>. The goal of the game is to avoid obstacles by moving your mouse to control the player and pressing keys to pop incoming hazards. (The guide to the gameplay is in one of the images above). The game features multiple difficulty levels and a high score system for all three difficulties. The longer you survive the more points you get!</p2>
               <p2>&emsp;&emsp;My goal for Text Pop was to create a game that I could solely make myself. The biggest challenge was to find a way to make the game look visually appealing without hiring an artist. Initially, the game looked very bland as all the hazards were just a dull gray color and when I added different colors to the hazards, it then looked too confusing and random. Eventually, I realized I could use linear interpolation and associate an rgb value with an aspect of the game such as time, key, and hazard speed to give all the hazards a unique look that actually relates to the gameplay. This not only made the game look significantly better, but also provides the player visual cues to make gameplay cleaner.</p2>
               <br>
-              <p2>The Github repository of the game is <a href="https://github.com/DavidD-Fleming/TextPop" target="_blank">here</a> and you can play it yourself by downloading it <a href="Text Pop Game.zip" download>here</a> (Windows only).</p2>
+              <p2>The Github repository of the game is <a href="https://github.com/DavidD-Fleming/TextPop" target="_blank">here</a>.</p2>
             </div>
           </div>
           <div class="mySlides fade">
@@ -204,7 +204,7 @@
       <br>
     </div>
     <div class="footer">
-      <p>&copy; 2021 David Dong</p>
+      <p>&copy; 2022 David Dong</p>
     </div>
   </body>
   <script src="scripts.js"></script>
