Changed physics image to be better sized and more appropriate

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <ul class="navbar">
         <a class="nav-link nav-link-fade-up" href="#Introduction">David Dong</a>
         <a class="nav-link nav-link-fade-up" style="float:right; margin-right: 5em" href="#Physics">Physics</a>
-        <a class="nav-link nav-link-fade-up" style="float:right" href="#Clubs">Clubs</a>
         <a class="nav-link nav-link-fade-up" style="float:right" href="#Experience">Experience</a>
+        <a class="nav-link nav-link-fade-up" style="float:right" href="#Clubs">Clubs</a>
         <a class="nav-link nav-link-fade-up" style="float:right" href="#Projects">Projects</a>
       </ul>
     </nav>
@@ -176,7 +176,7 @@
         <h1>Physics</h1>
         <p1>Here, I'll go over the things I do for fun! Focusing specifically on physics!</p1>
         <div id="HobbyPhysics">
-          <img src="images/physicists.jpg" alt="Picture of important physicists and their equations.">
+          <img class="soloprojectimg" src="images/physics.jpg" alt="Picture of equations.">
           <p3>Originally, this section was not solely dedicated to physics and I elaborated on my other hobbies like gardening, reading, and etc. However, it did not feel right not at least mentioning physics, I am majoring in the subject alongside CS after all.</p3>
           <p3>While I love physics, I would not at all consider myself to be skilled on the subject - physics is too substantial and complicated a field for me to even consider that. However, I love learning physics. Whether it's watching lectures from Richard Feynman or reading just a little about the electrodynamics of moving bodies, the field has an endless amount of content waiting to be devoured.</p3>
           <p3>My ambition for this field is to combine my knowledge of CS and physics to create something utilizing aspects of both. While I have worked on projects relating to both fields, this website as an example of CS and my paper on <a href="extra/Holography.pdf" target="_blank">holography</a> for physics, I have yet to bring together both worlds to create something truly worthwhile. </p3>
