Created library section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <nav id="navlist">
       <ul class="navbar">
         <a class="nav-link nav-link-fade-up" href="#Introduction">David Dong</a>
-        <a class="nav-link nav-link-fade-up" style="float:right; margin-right: 5em" href="#Physics">Physics</a>
+        <a class="nav-link nav-link-fade-up" style="float:right; margin-right: 5em" href="#Library">Library</a>
+        <a class="nav-link nav-link-fade-up" style="float:right" href="#Physics">Physics</a>
         <a class="nav-link nav-link-fade-up" style="float:right" href="#Experience">Experience</a>
         <a class="nav-link nav-link-fade-up" style="float:right" href="#Clubs">Clubs</a>
         <a class="nav-link nav-link-fade-up" style="float:right" href="#Projects">Projects</a>
@@ -188,9 +189,21 @@
       <br>
       <br>
       <br>
+      <section id="Library">
+        <h1>Library</h1>
+        <p1>Goodreads didn't satisfy my need to show off my favorite recent reads so I have some of them shown off here instead! Click on a specific book to read a short snippet of my thoughts, my ratings, and my favorite quote from the book!</p1>
+        <div id="HobbyBooks">
+          
+        </div>
+      </section>
+      <br>
+      <br>
+      <br>
+      <br>
       <div class="footer">
-        <p>&copy; 2022 David Dong</p>
+        <p>&copy; 2023 David Dong</p>
       </div>
   </body>
+  <script src="library.js"></script>
   <script src="scripts.js"></script>
 </html>
