Created some simple changes
Fixed some spelling errors, updated descriptions, changed physics picture, and added goodreads link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br>
         <p>I am currently a student at Rutgers University majoring in Computer Science and Physics. I chose these majors because I love learning new things and what better things to learn than computer science which is everywhere and physics which is everything!</p>
         <br>
-        <p>This website was primarily made to chornicle my past projects and show them off. I will give a basic summary of each one and go into detail about the processes I used and my takeaways. After all my projects, I will also go into my work experience, clubs, and hobbies (specifically physics). I hope you enjoy!</p>
+        <p>This website was primarily made to chronicle my past projects and show them off. I will give a basic summary of each one and go into detail about the processes I used and my takeaways. After all my projects, I will also go into my work experience, clubs, and hobbies (specifically physics and reading). I hope you enjoy!</p>
         <br>
         <p>Here are resources you can use to link up with me:</p>
         <br>
@@ -39,6 +39,9 @@
           </a>
           <a href="https://www.linkedin.com/in/david-dong-b14920211/" target="_blank" style="color:#e8e8e8">
             <img src="images/linkedinicon.png" alt="Linkedin." class="iconimg">
+          </a>
+          <a href="https://www.goodreads.com/david_dong" target="_blank" style="color:#e8e8e8">
+            <img src="images/goodreads.png" alt="Goodreads." class="iconimg">
           </a>
         </div>
         <br>
@@ -176,10 +179,10 @@
       <br>
       <section id="Physics">
         <h1>Physics</h1>
-        <p1>Here, I'll go over the things I do for fun! Focusing specifically on physics!</p1>
+        <p1>Einstein developed a theory about space. And, boy, it was about time, too!</p1>
         <div id="HobbyPhysics">
-          <img class="soloprojectimg" src="images/physics.jpg" alt="Picture of equations.">
-          <p3>Originally, this section was not solely dedicated to physics and I elaborated on my other hobbies like gardening, reading, and etc. However, it did not feel right not at least mentioning physics, I am majoring in the subject alongside CS after all.</p3>
+          <img class="soloprojectimg" src="images/physics1.jpg" alt="Picture of equations.">
+          <p3>Originally, this section was not solely dedicated to physics and I elaborated on my other hobbies like gardening, reading, and etc. However, it did not feel right not at least mentioning physics, I am majoring in the subject alongside CS after all. (The picture above is of a 640nm laser I used in one of my classes that I found incredibly gorgeous).</p3>
           <p3>While I love physics, I would not at all consider myself to be skilled on the subject - physics is too substantial and complicated a field for me to even consider that. However, I love learning physics. Whether it's watching lectures from Richard Feynman or reading just a little about the electrodynamics of moving bodies, the field has an endless amount of content waiting to be devoured.</p3>
           <p3>My ambition for this field is to combine my knowledge of CS and physics to create something utilizing aspects of both. While I have worked on projects relating to both fields, this website as an example of CS and my paper on <a href="extra/Holography.pdf" target="_blank">holography</a> for physics, I have yet to bring together both worlds to create something truly worthwhile. </p3>
           <p3>I am still years and years away from that goal but it is the holy grail I hope to find. For the sake of clarity, I won't elaborate further but definitely reach out to me if you want to talk physics!</p3>
@@ -191,7 +194,7 @@
       <br>
       <section id="Library">
         <h1>Library</h1>
-        <p1>Goodreads didn't satisfy my need to show off my favorite recent reads so I have some of them shown off here instead! Click on a specific book to read a short snippet of my thoughts, my ratings, and my favorite quote from the book!</p1>
+        <p1>Goodreads didn't quite satisfy my need to show off my favorite recent reads so I have some of them shown off here instead! Most of these books I have read from 2022 and on. I will try my best to keep this updated! Still under construction!</p1>
         <div id="HobbyBooks">
           
         </div>
